--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "test": "jest"
+    "test": "jest --runInBand"
   },
   "dependencies": {
     "decimal.js": "^10.4.3",
     "express": "^4.18.2",
     "lodash.debounce": "^4.0.8",
     "q": "^1.5.1",
-    "rxjs": "^7.8.1",
     "vue": "^3.3.2"
   },
   "devDependencies": {
@@ -28,6 +27,7 @@
     "babel-jest": "^29.5.0",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
+    "flush-promises": "^1.0.2",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.8.8",
