--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.18.2",
     "lodash.debounce": "^4.0.8",
     "q": "^1.5.1",
-    "vue": "^3.3.2"
+    "vue": "^3.3.2",
+    "we-assert": "^5.0.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.4",
