--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xero-factor-2",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -8,7 +8,10 @@
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "test": "jest --runInBand"
+    "test:integration": "jest --testPathPattern=tests/integration --silent --verbose",
+    "test:silent": "jest --silent",
+    "test:unit": "jest --config jest.unit.config.js --verbose",
+    "start" : "node app.js"
   },
   "dependencies": {
     "decimal.js": "^10.4.3",
@@ -27,13 +30,16 @@
     "@vue/vue3-jest": "^29.2.4",
     "babel-jest": "^29.5.0",
     "eslint": "^8.39.0",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-vue": "^9.11.0",
     "flush-promises": "^1.0.2",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.8.8",
     "sass": "^1.63.2",
-    "vite": "^4.3.5"
+    "uuid": "^9.0.0",
+    "vite": "^4.3.5",
+    "worker-plugin": "^5.0.1"
   },
   "jest": {
     "moduleFileExtensions": [
