--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "@xerocross/data-is": "^1.3.0",
     "decimal.js": "^10.4.3",
     "express": "^4.18.2",
     "lodash.debounce": "^4.0.8",
     "q": "^1.5.1",
     "vue": "^3.3.2",
-    "we-assert": "^5.1.1"
+    "we-assert": "^6.0.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.4",
