--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@xerocross/data-is": "^1.3.0",
+    "@xerocross/literate": "^1.0.0",
     "decimal.js": "^10.4.3",
     "express": "^4.18.2",
     "lodash.debounce": "^4.0.8",
