--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
     "test:integration": "jest --testPathPattern=tests/integration --silent --verbose",
     "test:silent": "jest --silent",
@@ -26,12 +26,15 @@
   "devDependencies": {
     "@babel/preset-env": "^7.22.4",
     "@rushstack/eslint-patch": "^1.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/test-utils": "^2.3.2",
     "@vue/vue3-jest": "^29.2.4",
     "babel-jest": "^29.5.0",
-    "eslint": "^8.39.0",
+    "eslint": "^8.43.0",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-vue": "^9.11.0",
     "flush-promises": "^1.0.2",
