--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
   },
   "dependencies": {
     "@xerocross/data-is": "^1.3.0",
-    "@xerocross/literate": "^1.0.0",
+    "@xerocross/literate": "^1.5.0",
     "decimal.js": "^10.4.3",
     "express": "^4.18.2",
     "lodash.debounce": "^4.0.8",
     "q": "^1.5.1",
+    "query-string": "^8.1.0",
     "vue": "^3.3.2",
     "we-assert": "^6.0.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.4",
     "@rushstack/eslint-patch": "^1.2.0",
+    "@types/jest": "^29.5.2",
+    "@types/lodash.debounce": "^4.0.7",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "@vitejs/plugin-vue": "^4.2.3",
@@ -42,6 +46,7 @@
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.8.8",
     "sass": "^1.63.2",
+    "ts-jest": "^29.1.1",
     "uuid": "^9.0.0",
     "vite": "^4.3.5",
     "worker-plugin": "^5.0.1"
