--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   },
   "dependencies": {
     "@xerocross/data-is": "^1.3.0",
-    "@xerocross/literate": "^1.0.0",
+    "@xerocross/literate": "^1.3.0",
     "decimal.js": "^10.4.3",
     "express": "^4.18.2",
     "lodash.debounce": "^4.0.8",
     "q": "^1.5.1",
+    "query-string": "^8.1.0",
     "vue": "^3.3.2",
     "we-assert": "^6.0.1"
   },
