--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "devDependencies": {
     "@babel/preset-env": "^7.22.4",
     "@rushstack/eslint-patch": "^1.2.0",
+    "@types/jest": "^29.5.2",
+    "@types/lodash.debounce": "^4.0.7",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "@vitejs/plugin-vue": "^4.2.3",
@@ -43,6 +45,7 @@
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.8.8",
     "sass": "^1.63.2",
+    "ts-jest": "^29.1.1",
     "uuid": "^9.0.0",
     "vite": "^4.3.5",
     "worker-plugin": "^5.0.1"
