--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/jest": "^29.5.2",
     "@types/lodash.debounce": "^4.0.7",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "@vitejs/plugin-vue": "^4.2.3",
