--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "test:integration": "jest --testPathPattern=tests/integration --silent --verbose",
+    "test:integration": "jest --config jest.integration.config.js --silent --verbose",
     "test:silent": "jest --silent",
     "test:unit": "jest --config jest.unit.config.js --verbose --silent",
     "start": "node app.js"
